bisonc++ (4.13.01)

  * slightly modified the icmake build scripts to prevent multiple inclusions
    of some of the installed files.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Fri, 18 Dec 2015 13:41:08 +0100

bisonc++ (4.13.00)

  * 'build install' supports an optional LOG: argument: the (relative or
    absolute) path to a installation log file. The environment variable
    BISONCPP is no longer used.

  * Updated the usage info displayed by `./build', altered the procedure to
    install the files at their final destinations.

  * Following a suggestion made by gendx the polymorphic class Semantic now
    defines a variadic template constructor, allowing Semantic objects
    (and thus SType::emplace) to be initialized (c.q. called) using any set of
    argument types that are supported by Semantic's DataType. Also, the
    (internally used) classes HasDefault and NoDefault are now superfluous and
    were removed (from skeletons/bisonc++polymorphic and
    skeletons/bisonc++polymorphic.inline). 

  * Adapted the icmake build files to icmake 8.00.04

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sun, 13 Dec 2015 16:29:41 +0100

bisonc++ (4.12.03)

  * Kevin Brodsky observed that the installation scripts used 'chdir' rather
    than 'cd'. Fixed in this release.

  * Kevin Brodsky also observed that the combined size of all precompiled 
    headers might exceed some disks capacities. The option -P was added to the
    ./build script to prevent the use of precompiled headers.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Mon, 05 Oct 2015 20:17:56 +0200

bisonc++ (4.12.02)

  * Refined the 'build uninstall' procedure

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sun, 04 Oct 2015 16:27:18 +0200

bisonc++ (4.12.01)

  * The implementation of the ./build script was improved.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Thu, 01 Oct 2015 18:41:45 +0200

bisonc++ (4.12.00)

  * Added 'build uninstall'. This command only works if, when calling one of