@@ -1,4 +1,4 @@
-#include "bisonc++.ih"
+#include "main.ih"
 #include "VERSION"
 
 char version[] = VERSION;
